# schreiber

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENCE.md  README.md  vcpkg.json
.github/workflows/: schreiber-ci.yml
config/cmake/: FindClangTableGen.cmake  FindClangTidy.cmake  FindLLVMTableGen.cmake  add_targets.cmake  configure_lit.cmake  packages.cmake
config/cmake/toolchains/: clang_libcxx.cmake  clang_libstdcxx.cmake  common.cmake
config/vcpkg/: clang_libcxx.cmake  clang_libstdcxx.cmake
include/schreiber/: diagnostic_ids.hpp  info.hpp  parser.hpp
source/: CMakeLists.txt  diagnostic_ids.cpp  info.cpp
source/parser/: CMakeLists.txt  parse_function.cpp  parser_common.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/diagnostics/: CMakeLists.txt  check_diagnostic_ids.cpp
test/diagnostics/documented/: translation_unit_decl.cc
test/diagnostics/functions/: repeated_parameter.cc  repeated_return.cc  unknown_directive.cc  unknown_parameter.cc
test/diagnostics/undocumented/: class_decl.cc  duplicates.cc  namespace_decl.cc  translation_unit_decl.cc
test/info/: CMakeLists.txt  test_classof.cpp  test_function_info.cpp
test/parser/: CMakeLists.txt  test_parse_function.cpp
utilities/: CMakeLists.txt  verify_diagnostics.cpp
